# sensors-applet

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac  org.gnome.applets.SensorsApplet.panel-applet.in.in  org.gnome.panel.applet.SensorsAppletFactory.service.in
help/: ChangeLog
help/C/: sensors-applet.xml
lib/: sensors-applet-plugin.c
plugins/: Makefile.am
plugins/acpi/: acpi-plugin.c  acpi-plugin.h
plugins/aticonfig/: aticonfig-plugin.c
plugins/devkit-disks/: Makefile.am  devkit-plugin.c  devkit-plugin.h
plugins/eee/: eee-plugin.c
plugins/hddtemp/: hddtemp-plugin.c  hddtemp-plugin.h
plugins/i2c-proc/: i2c-proc-plugin.c  i2c-proc-plugin.h
plugins/i2c-sys/: i2c-sys-plugin.c  i2c-sys-plugin.h
plugins/i8k/: i8k-plugin.c  i8k-plugin.h
plugins/ibm-acpi/: ibm-acpi-plugin.c  ibm-acpi-plugin.h
plugins/libsensors/: libsensors-plugin.c  libsensors-plugin.h
plugins/mbmon/: Makefile.am
plugins/nvidia/: nvidia-plugin.c
plugins/omnibook/: omnibook-plugin.c  omnibook-plugin.h
plugins/pmu-sys/: pmu-sys-plugin.c  pmu-sys-plugin.h
plugins/smu-sys/: smu-sys-plugin.c  smu-sys-plugin.h
plugins/sonypi/: sonypi-plugin.c
plugins/udisks/: udisks-plugin.c
po/: ChangeLog  POTFILES.in  cs.po  de.po  es.po  fi.po  fr.po  hu.po  it.po  pl.po  pt_BR.po  ro.po  ru.po  sv.po  zh_CN.po
sensors-applet/: Makefile.am  about-dialog.c  about-dialog.h  active-sensor-libnotify.c  active-sensor-libnotify.h  active-sensor.c  active-sensor.h  main.c  prefs-dialog.c  prefs-dialog.h  sensor-config-dialog.c  sensor-config-dialog.h  sensors-applet-gconf.c  sensors-applet-gconf.h  sensors-applet-plugin.h  sensors-applet-plugins.c  sensors-applet-plugins.h  sensors-applet-sensor.h  sensors-applet.c  sensors-applet.h
